--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,17 +1,392 @@
-:root {
-  --primary-color: #0d24a6;
-  --secondary-color: #44fef2;
-  --tertiary-color: #437320;
-  --quaternary-color: #bf2a2a;
-  --base-color: #0d0d0d;
-  --card-color: #1c1c1c;
+body {
+  display: grid;
+  min-width: 860px;
+  height: 100vh;
+  background: #0d0d0d;
+  grid-template-columns: 1fr 4fr;
+  grid-template-rows: 76px 1fr;
+  gap: 24px;
+  grid-template-areas: "header header" "sidebar main";
 }
 
 header {
+  margin: 0;
+  grid-area: header;
+  height: 100%;
   display: flex;
   padding: 10px;
   justify-content: space-between;
   align-items: center;
+  align-self: center;
+  background: #0d0d0d;
+}
+
+header .arrows {
+  display: flex;
+  padding: 10px;
+  align-items: flex-start;
+  gap: 10px;
+}
+
+header .arrows .back {
+  width: 22;
+  height: 30;
+  color: white;
+}
+
+header .arrows .forward {
+  width: 22;
+  height: 30;
+  color: #bfb6b6;
+}
+
+header .searchBar {
+  height: 52pxpx;
+  display: flex;
+  min-width: 360px;
+  max-width: 720px;
+  align-items: center;
+  gap: 4px;
+  border-radius: 28px;
+  background: #1c1c1c;
+}
+
+header .searchBar .searchArea {
+  display: flex;
+  padding: 4px 12px;
+  margin: 0;
+  align-items: center;
+  width: 100%;
+}
+
+header .searchBar .searchArea input {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  gap: 10px;
   align-self: stretch;
-  background: var(--base-color);
+  background: #1c1c1c;
+  border-color: transparent;
+  color: white;
+}
+
+header .searchBar .searchArea svg {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+header .tabGroup {
+  display: flex;
+  align-items: center;
+  align-self: stretch;
+  color: #e6e0e9;
+  text-align: center;
+  /* M3/title/small */
+  font-family: Roboto;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 20px;
+  /* 142.857% */
+  letter-spacing: 0.1px;
+}
+
+header .tabGroup .profile {
+  display: flex;
+  height: 48px;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  flex: 1 0 0;
+  color: white;
+}
+
+header .tabGroup .profile .avatar {
+  display: flex;
+  width: 24px;
+  height: 24px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 100px;
+  background: #44fef2;
+  /* M3/title/medium */
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+  /* 150% */
+  letter-spacing: 0.15px;
+}
+
+header .tabGroup .profile .lang {
+  color: white;
+  text-align: center;
+  /* M3/title/small */
+  font-family: Roboto;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 20px;
+  /* 142.857% */
+  letter-spacing: 0.1px;
+}
+
+header .tabGroup .server {
+  display: flex;
+  height: 48px;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  flex: 1 0 0;
+}
+
+header .tabGroup .state-layer {
+  display: flex;
+  padding: 0px 16px;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  flex: 1 0 0;
+  align-self: stretch;
+}
+
+header .tabGroup .state-layer .content {
+  display: flex;
+  padding: 12px 0px;
+  justify-content: center;
+  align-items: flex-end;
+  gap: 8px;
+  flex: 1 0 0;
+}
+
+header .divider {
+  width: 240px;
+  height: 1px;
+  background: #36343b;
+}
+
+main {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  padding-bottom: 24px;
+  flex-direction: column;
+  align-items: center;
+  gap: 24px;
+  flex-shrink: 0;
+  align-self: stretch;
+}
+
+main .chatHistory {
+  display: flex;
+  padding: 4px;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: start;
+  gap: 10px;
+  flex: 1 0 0;
+  align-self: stretch;
+  border-radius: 64px 0px 0px 0px;
+  background: #1c1c1c;
+}
+
+main .chatHistory .oldMessages {
+  display: flex;
+  height: 72px;
+  padding: 8px 24px 8px 16px;
+  align-items: center;
+  gap: 16px;
+  align-self: stretch;
+}
+
+main .chatHistory .oldMessages .avatar {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  flex-shrink: 0;
+  border-radius: 100px;
+  background: var(--M3-sys-dark-primary-container, #4f378b);
+  color: white;
+}
+
+main .chatHistory .oldMessages .content .headline {
+  align-self: stretch;
+  color: #44fef2;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  /* 150% */
+  letter-spacing: 0.5px;
+}
+
+main .chatHistory .oldMessages .content .message {
+  height: 20px;
+  align-self: stretch;
+  overflow: hidden;
+  color: var(--M3-sys-dark-on-surface-variant, #cac4d0);
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  /* M3/body/medium */
+  font-family: Roboto;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  /* 142.857% */
+  letter-spacing: 0.25px;
+}
+
+main .sendMessage {
+  display: flex;
+  height: 52px;
+  padding: 12px 24px;
+  align-items: center;
+  gap: 40px;
+  align-self: stretch;
+  background: #1c1c1c;
+}
+
+main .sendMessage .writeBar {
+  display: flex;
+  padding: 8px 0px 8px 12px;
+  align-items: center;
+  gap: 18px;
+  flex: 1 0 0;
+  align-self: stretch;
+}
+
+main .sendMessage .writeBar svg {
+  width: 28px;
+  height: 28px;
+}
+
+main .sendMessage .writeBar input {
+  background-color: transparent;
+  border: none;
+  width: 100%;
+  height: 100%;
+  color: white;
+}
+
+main .sendMessage .micButton {
+  display: flex;
+  width: 48px;
+  height: 48px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 32px;
+  background: #0d0d0d;
+}
+
+main .sendMessage .submitButton {
+  display: flex;
+  width: 48px;
+  height: 48px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 32px;
+  background: #0d0d0d;
+}
+
+aside {
+  grid-area: sidebar;
+  height: 100%;
+  width: 100%;
+}
+
+aside .socialSidaBar {
+  display: flex;
+  width: 100%;
+  padding: 0px;
+  margin: 0px;
+  flex-direction: column;
+  align-items: start;
+  gap: 24px;
+  flex-shrink: 0;
+  align-self: stretch;
+  justify-content: flex-start;
+}
+
+aside .socialSidaBar .socialCards {
+  display: flex;
+  width: 100%;
+  height: 72px;
+  min-height: 72px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+aside .socialSidaBar .socialCards:hover {
+  background: #1c1c1c;
+}
+
+aside .socialSidaBar .socialCards .stateLayer {
+  display: flex;
+  padding: 8px 24px 8px 16px;
+  align-items: center;
+  gap: 16px;
+  flex: 1 0 0;
+  align-self: stretch;
+}
+
+aside .socialSidaBar .socialCards .stateLayer .avatar {
+  display: flex;
+  width: 40px;
+  height: 40px;
+  justify-content: center;
+  align-items: center;
+  color: #fef7ff;
+  text-align: center;
+  /* M3/title/medium */
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+  /* 150% */
+  letter-spacing: 0.15px;
+  border-radius: 100px;
+  border: 2px solid #44fef2;
+  background: #1c1c1c;
+}
+
+aside .socialSidaBar .socialCards .stateLayer .content .headline {
+  align-self: stretch;
+  color: #44fef2;
+  /* M3/body/large */
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  /* 150% */
+  letter-spacing: 0.5px;
+}
+
+aside .socialSidaBar .socialCards .stateLayer .content .littleText {
+  height: 20px;
+  align-self: stretch;
+  overflow: hidden;
+  color: #d1d1d1;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  /* M3/body/medium */
+  font-family: Roboto;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  /* 142.857% */
+  letter-spacing: 0.25px;
 }
