--- a/chat/templates/chat/index.html
+++ b/chat/templates/chat/index.html
@@ -1,14 +1,29 @@
 <!-- chat/templates/chat/index.html -->
+{% load static %}
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
     <title>Chat Rooms</title>
+    <link href="{% static '/css/style.css' %}" rel="stylesheet" />
   </head>
   <body>
-    What chat room would you like to enter?<br />
-    <input id="room-name-input" type="text" size="100" /><br />
-    <input id="room-name-submit" type="button" value="Enter" />
+    <div class="enterRoomPage">
+      <div class="roomNameLabel">What chat room would you like to enter?</div>
+
+      <input
+        id="room-name-input"
+        class="roomNameInput"
+        type="text"
+        size="100"
+      /><br />
+      <input
+        id="room-name-submit"
+        class="roomNameSubmit"
+        type="button"
+        value="Enter"
+      />
+    </div>
 
     <script>
       document.querySelector("#room-name-input").focus();
