--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -6,16 +6,67 @@ $base-color: #0d0d0d;
 $card-color: #1c1c1c;
 
 body {
-  display: grid;
-  min-width: 860px;
+  display: flex;
+  min-width: 100vh;
   height: 100vh;
   background: $base-color;
-  grid-template-columns: 1fr 4fr;
-  grid-template-rows: 76px 1fr;
-  gap: 24px;
-  grid-template-areas:
-    "header header"
-    "sidebar main";
+  justify-content: center;
+  align-items: center;
+  .chatPage {
+    width: 100%;
+    height: 100%;
+    display: grid;
+
+    grid-template-columns: 1fr 4fr;
+    grid-template-rows: 76px 1fr;
+    gap: 24px;
+    grid-template-areas:
+      "header header"
+      "sidebar main";
+  }
+  .loginPage {
+    color: white;
+    background-color: $card-color;
+    display: flex;
+    height: 720px;
+    width: 480px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .enterRoomPage {
+    color: white;
+    background-color: $card-color;
+    display: flex;
+    height: 80vh;
+    width: 60vh;
+    gap: 24px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 18px;
+    .roomNameInput {
+      width: 80%;
+      height: fit-content;
+      padding: 12px;
+      border-radius: 24px;
+      background: $base-color;
+      color: white;
+      border: none;
+    }
+    .roomNameSubmit {
+      width: fit-content;
+      display: flex;
+      align-self: center;
+      justify-content: center;
+      height: fit-content;
+      padding: 18px 24px;
+      border-radius: 24px;
+      background: $base-color;
+      color: white;
+      border: none;
+    }
+  }
 }
 
 header {
@@ -182,7 +233,7 @@ main {
     gap: 0px;
     flex: 1 0 0;
     align-self: stretch;
-    border-radius: 64px 0px 0px 0px;
+    border-radius: 16px 0px 0px 0px;
     background: $card-color;
     .oldMessages {
       display: flex;
