--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,6 +6,9 @@ body {
   justify-content: center;
   align-items: center;
 }
+body a {
+  text-decoration: none;
+}
 body .chatPage {
   width: 100%;
   height: 100%;
@@ -24,6 +27,43 @@ body .loginPage {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+body .loginPage form {
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+body .loginPage form div {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+body .loginPage form div label {
+  color: white;
+}
+body .loginPage form div input {
+  padding: 12px;
+  border-radius: 24px;
+  background: #0d0d0d;
+  color: white;
+  border: none;
+}
+body .loginPage .submitButtons {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+body .loginPage .submitButtons button {
+  width: fit-content;
+  height: fit-content;
+  padding: 12px 18px;
+  border-radius: 24px;
+  background: #0d0d0d;
+  color: white;
+  border: none;
+  display: flex;
+  cursor: pointer;
 }
 body .enterRoomPage {
   color: white;
@@ -124,9 +164,10 @@ header .tabGroup {
   align-self: stretch;
   color: #e6e0e9;
   text-align: center;
+  gap: 12px;
   /* M3/title/small */
   font-family: Roboto;
-  font-size: 14px;
+  font-size: 18px;
   font-style: normal;
   font-weight: 500;
   line-height: 20px; /* 142.857% */
@@ -140,6 +181,7 @@ header .tabGroup .profile {
   align-items: center;
   flex: 1 0 0;
   color: white;
+  gap: 8px;
 }
 header .tabGroup .profile .avatar {
   display: flex;
@@ -149,24 +191,10 @@ header .tabGroup .profile .avatar {
   align-items: center;
   border-radius: 100px;
   background: #44fef2;
-  /* M3/title/medium */
-  font-family: Roboto;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 24px; /* 150% */
-  letter-spacing: 0.15px;
 }
 header .tabGroup .profile .lang {
   color: white;
   text-align: center;
-  /* M3/title/small */
-  font-family: Roboto;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 20px; /* 142.857% */
-  letter-spacing: 0.1px;
 }
 header .tabGroup .server {
   display: flex;
@@ -197,6 +225,36 @@ header .divider {
   width: 240px;
   height: 1px;
   background: #36343b;
+}
+header .dropdown {
+  position: relative;
+  display: inline-block;
+}
+header .dropdown:hover {
+  background-color: #1c1c1c;
+}
+header .dropdown:hover .dropdown-content {
+  opacity: 1;
+  transform: scaleY(1);
+}
+header .dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #1c1c1c;
+  color: #e6e0e9;
+  min-width: 96px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  margin-bottom: -46px;
+  margin-right: 24px;
+  padding: 12px 16px;
+  z-index: 1;
+  display: block;
+  transition: all 0.3s ease-in-out;
+  transform-origin: top;
+  opacity: 0;
+}
+header .dropdown-content a {
+  color: white;
 }
 
 main {
@@ -314,6 +372,18 @@ main .sendMessage .submitButton {
   gap: 10px;
   border-radius: 32px;
   background: #0d0d0d;
+}
+main .firstLogin {
+  display: flex;
+  padding: 4px;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: start;
+  gap: 0px;
+  flex: 1 0 0;
+  align-self: stretch;
+  border-radius: 16px 0px 0px 0px;
+  background: #1c1c1c;
 }
 
 aside {
