--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -12,6 +12,9 @@ body {
   background: $base-color;
   justify-content: center;
   align-items: center;
+  a {
+    text-decoration: none;
+  }
   .chatPage {
     width: 100%;
     height: 100%;
@@ -33,6 +36,43 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    form {
+      width: 70%;
+      display: flex;
+      flex-direction: column;
+      gap: 24px;
+      div {
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+        label {
+          color: white;
+        }
+        input {
+          padding: 12px;
+          border-radius: 24px;
+          background: $base-color;
+          color: white;
+          border: none;
+        }
+      }
+    }
+    .submitButtons {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      button {
+        width: fit-content;
+        height: fit-content;
+        padding: 12px 18px;
+        border-radius: 24px;
+        background: $base-color;
+        color: white;
+        border: none;
+        display: flex;
+        cursor: pointer;
+      }
+    }
   }
   .enterRoomPage {
     color: white;
@@ -134,10 +174,11 @@ header {
     align-self: stretch;
     color: #e6e0e9;
     text-align: center;
+    gap: 12px;
 
     /* M3/title/small */
     font-family: Roboto;
-    font-size: 14px;
+    font-size: 18px;
     font-style: normal;
     font-weight: 500;
     line-height: 20px; /* 142.857% */
@@ -150,6 +191,7 @@ header {
       align-items: center;
       flex: 1 0 0;
       color: white;
+      gap: 8px;
       .avatar {
         display: flex;
         width: 24px;
@@ -159,26 +201,10 @@ header {
 
         border-radius: 100px;
         background: $secondary-color;
-
-        /* M3/title/medium */
-        font-family: Roboto;
-        font-size: 16px;
-        font-style: normal;
-        font-weight: 500;
-        line-height: 24px; /* 150% */
-        letter-spacing: 0.15px;
       }
       .lang {
         color: white;
         text-align: center;
-
-        /* M3/title/small */
-        font-family: Roboto;
-        font-size: 14px;
-        font-style: normal;
-        font-weight: 500;
-        line-height: 20px; /* 142.857% */
-        letter-spacing: 0.1px;
       }
     }
     .server {
@@ -211,6 +237,36 @@ header {
     width: 240px;
     height: 1px;
     background: #36343b;
+  }
+  .dropdown {
+    position: relative;
+    display: inline-block;
+    &:hover {
+      background-color: $card-color;
+    }
+    &:hover .dropdown-content {
+      opacity: 1;
+      transform: scaleY(1);
+    }
+  }
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: $card-color;
+    color: #e6e0e9;
+    min-width: 96px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    margin-bottom: -46px;
+    margin-right: 24px;
+    padding: 12px 16px;
+    z-index: 1;
+    display: block;
+    transition: all 0.3s ease-in-out;
+    transform-origin: top;
+    opacity: 0;
+    a {
+      color: white;
+    }
   }
 }
 
@@ -332,6 +388,18 @@ main {
       border-radius: 32px;
       background: $base-color;
     }
+  }
+  .firstLogin {
+    display: flex;
+    padding: 4px;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: start;
+    gap: 0px;
+    flex: 1 0 0;
+    align-self: stretch;
+    border-radius: 16px 0px 0px 0px;
+    background: $card-color;
   }
 }
 
