--- a/chat/templates/chat/components/header.html
+++ b/chat/templates/chat/components/header.html
@@ -72,7 +72,7 @@
         </div>
       </div>
       <div class="dropdown-content">
-        <a href="">Logout </a>
+        <a href="{% url 'logout' %}">Logout</a>
         {% comment %} {% url 'logout' %} {% endcomment %}
       </div>
     </nav>
