--- a/static/css/style.css
+++ b/static/css/style.css
@@ -325,7 +325,54 @@ main .chatHistory .oldMessages .content .message {
   line-height: 20px; /* 142.857% */
   letter-spacing: 0.25px;
 }
-main .sendMessage {
+main .chatHistory .mySelf {
+  display: flex;
+  justify-content: flex-end;
+  height: 72px;
+  padding: 8px 24px 8px 16px;
+  align-items: center;
+  gap: 16px;
+  align-self: stretch;
+}
+main .chatHistory .mySelf .avatar {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  flex-shrink: 0;
+  border-radius: 100px;
+  background: var(--M3-sys-dark-primary-container, #4f378b);
+  color: white;
+}
+main .chatHistory .mySelf .content .headline {
+  align-self: stretch;
+  color: #44fef2;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 150% */
+  letter-spacing: 0.5px;
+}
+main .chatHistory .mySelf .content .message {
+  height: 20px;
+  align-self: stretch;
+  overflow: hidden;
+  color: var(--M3-sys-dark-on-surface-variant, #cac4d0);
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  /* M3/body/medium */
+  font-family: Roboto;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px; /* 142.857% */
+  letter-spacing: 0.25px;
+}
+
+.sendMessage {
   display: flex;
   height: 52px;
   padding: 12px 24px;
@@ -334,7 +381,7 @@ main .sendMessage {
   align-self: stretch;
   background: #1c1c1c;
 }
-main .sendMessage .writeBar {
+.sendMessage .writeBar {
   display: flex;
   padding: 8px 0px 8px 12px;
   align-items: center;
@@ -342,18 +389,18 @@ main .sendMessage .writeBar {
   flex: 1 0 0;
   align-self: stretch;
 }
-main .sendMessage .writeBar svg {
+.sendMessage .writeBar svg {
   width: 28px;
   height: 28px;
 }
-main .sendMessage .writeBar input {
+.sendMessage .writeBar input {
   background-color: transparent;
   border: none;
   width: 100%;
   height: 100%;
   color: white;
 }
-main .sendMessage .micButton {
+.sendMessage .micButton {
   display: flex;
   width: 48px;
   height: 48px;
@@ -363,7 +410,7 @@ main .sendMessage .micButton {
   border-radius: 32px;
   background: #0d0d0d;
 }
-main .sendMessage .submitButton {
+.sendMessage .submitButton {
   display: flex;
   width: 48px;
   height: 48px;
@@ -373,7 +420,8 @@ main .sendMessage .submitButton {
   border-radius: 32px;
   background: #0d0d0d;
 }
-main .firstLogin {
+
+.firstLogin {
   display: flex;
   padding: 4px;
   flex-direction: column;
