--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -340,67 +340,117 @@ main {
         }
       }
     }
-  }
-  .sendMessage {
-    display: flex;
-    height: 52px;
-    padding: 12px 24px;
-    align-items: center;
-    gap: 40px;
-    align-self: stretch;
-    background: $card-color;
-    .writeBar {
+    .mySelf {
       display: flex;
-      padding: 8px 0px 8px 12px;
+      justify-content: flex-end;
+      height: 72px;
+      padding: 8px 24px 8px 16px;
       align-items: center;
-      gap: 18px;
-      flex: 1 0 0;
+      gap: 16px;
       align-self: stretch;
-      svg {
-        width: 28px;
-        height: 28px;
-      }
-      input {
-        background-color: transparent;
-        border: none;
-        width: 100%;
-        height: 100%;
+      .avatar {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 40px;
+        height: 40px;
+        flex-shrink: 0;
+        border-radius: 100px;
+        background: var(--M3-sys-dark-primary-container, #4f378b);
         color: white;
       }
-    }
-    .micButton {
-      display: flex;
-      width: 48px;
-      height: 48px;
-      justify-content: center;
-      align-items: center;
-      gap: 10px;
-      border-radius: 32px;
-      background: $base-color;
-    }
-    .submitButton {
-      display: flex;
-      width: 48px;
-      height: 48px;
-      justify-content: center;
-      align-items: center;
-      gap: 10px;
-      border-radius: 32px;
-      background: $base-color;
+      .content {
+        .headline {
+          align-self: stretch;
+          color: $secondary-color;
+          font-family: Roboto;
+          font-size: 16px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: 24px; /* 150% */
+          letter-spacing: 0.5px;
+        }
+        .message {
+          height: 20px;
+          align-self: stretch;
+
+          overflow: hidden;
+          color: var(--M3-sys-dark-on-surface-variant, #cac4d0);
+          text-overflow: ellipsis;
+          white-space: nowrap;
+
+          /* M3/body/medium */
+          font-family: Roboto;
+          font-size: 14px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: 20px; /* 142.857% */
+          letter-spacing: 0.25px;
+        }
+      }
     }
   }
-  .firstLogin {
+}
+.sendMessage {
+  display: flex;
+  height: 52px;
+  padding: 12px 24px;
+  align-items: center;
+  gap: 40px;
+  align-self: stretch;
+  background: $card-color;
+  .writeBar {
     display: flex;
-    padding: 4px;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: start;
-    gap: 0px;
+    padding: 8px 0px 8px 12px;
+    align-items: center;
+    gap: 18px;
     flex: 1 0 0;
     align-self: stretch;
-    border-radius: 16px 0px 0px 0px;
-    background: $card-color;
+    svg {
+      width: 28px;
+      height: 28px;
+    }
+    input {
+      background-color: transparent;
+      border: none;
+      width: 100%;
+      height: 100%;
+      color: white;
+    }
   }
+  .micButton {
+    display: flex;
+    width: 48px;
+    height: 48px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border-radius: 32px;
+    background: $base-color;
+  }
+  .submitButton {
+    display: flex;
+    width: 48px;
+    height: 48px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border-radius: 32px;
+    background: $base-color;
+  }
+}
+.firstLogin {
+  display: flex;
+  padding: 4px;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: start;
+  gap: 0px;
+  flex: 1 0 0;
+  align-self: stretch;
+  border-radius: 16px 0px 0px 0px;
+  background: $card-color;
 }
 
 aside {
