--- a/chat/templates/chat/base.html
+++ b/chat/templates/chat/base.html
@@ -7,9 +7,11 @@
       {% block title %} EShopper - Bootstrap Shop Template {% endblock %}
     </title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <meta content={% block keywords %}"Free HTML Templates"{% endblock %}
-    name="keywords"> <meta content={% block description %}"Free HTML
-    Templates"{% endblock %} name="description">
+    <meta content={% block keywords %}"Django Chat App"{% endblock %}
+    name="keywords">
+    <!---->
+    <meta content={% block description %}"Django Chat App"{% endblock %}
+    name="description">
     <!-- Customized Bootstrap Stylesheet -->
     <link href="{% static '/css/style.css' %}" rel="stylesheet" />
   </head>
