--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -12,9 +12,6 @@ body {
   background: $base-color;
   justify-content: center;
   align-items: center;
-  a {
-    text-decoration: none;
-  }
   .chatPage {
     width: 100%;
     height: 100%;
@@ -59,6 +56,8 @@ body {
     }
     .submitButtons {
       display: flex;
+      flex-direction: row;
+      margin-top: 4px;
       align-items: center;
       justify-content: space-between;
       button {
@@ -71,6 +70,65 @@ body {
         border: none;
         display: flex;
         cursor: pointer;
+      }
+    }
+  }
+  .registerPage {
+    color: white;
+    background-color: $card-color;
+    display: flex;
+    height: 720px;
+    width: 480px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    form {
+      width: 70%;
+      display: flex;
+      flex-direction: column;
+      gap: 24px;
+      div {
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+        label {
+          color: white;
+        }
+        input {
+          padding: 12px;
+          border-radius: 24px;
+          background: $base-color;
+          color: white;
+          border: none;
+        }
+      }
+    }
+    .submitButtons {
+      display: flex;
+      flex-direction: row;
+      align-items: flex-start;
+      justify-content: space-between;
+      margin-top: 4px;
+      button {
+        width: fit-content;
+        height: fit-content;
+
+        padding: 12px 18px;
+        border-radius: 24px;
+        background: $base-color;
+        color: white;
+        border: none;
+        display: flex;
+        cursor: pointer;
+      }
+      .loginButton {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        label {
+          font-size: 14px;
+          cursor: pointer;
+        }
       }
     }
   }
@@ -105,6 +163,30 @@ body {
       background: $base-color;
       color: white;
       border: none;
+    }
+  }
+  a {
+    text-decoration: none;
+  }
+  .alert {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    background: #b03535;
+    color: white;
+    border-radius: 12px;
+    margin-top: 8px;
+    .errorlist {
+      gap: 8px;
+      li {
+        padding-left: 12px;
+        margin-left: 12px;
+        list-style-type: none;
+        padding: 0;
+        margin: 0;
+        gap: 4px;
+      }
     }
   }
 }
