--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -7,11 +7,12 @@ $card-color: #1c1c1c;
 
 body {
   display: flex;
-  min-width: 100vh;
+  min-width: 100dvh;
   height: 100vh;
   background: $base-color;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
   .chatPage {
     width: 100%;
     height: 100%;
@@ -210,8 +211,10 @@ header {
       width: 22;
       height: 30;
       color: white;
+      cursor: pointer;
     }
     .forward {
+      cursor: pointer;
       width: 22;
       height: 30;
       color: #bfb6b6;
@@ -226,13 +229,23 @@ header {
     gap: 4px;
     border-radius: 28px;
     background: $card-color;
+    form {
+      display: flex;
+      padding: 4px 12px;
+      margin: 0;
+      align-items: center;
+      width: 100%;
+    }
     .searchArea {
       display: flex;
       padding: 4px 12px;
       margin: 0;
       align-items: center;
       width: 100%;
-
+      button {
+        background-color: transparent;
+        border: none;
+      }
       input {
         display: flex;
         width: 100%;
@@ -247,6 +260,8 @@ header {
         display: flex;
         justify-content: flex-end;
         align-items: center;
+        background-color: transparent;
+        color: white;
       }
     }
   }
@@ -258,12 +273,11 @@ header {
     text-align: center;
     gap: 12px;
 
-    /* M3/title/small */
     font-family: Roboto;
     font-size: 18px;
     font-style: normal;
     font-weight: 500;
-    line-height: 20px; /* 142.857% */
+    line-height: 20px;
     letter-spacing: 0.1px;
     .profile {
       display: flex;
@@ -292,26 +306,37 @@ header {
     .server {
       display: flex;
       height: 48px;
+      width: fit-content;
+
       flex-direction: column;
       justify-content: flex-end;
       align-items: center;
       flex: 1 0 0;
+      flex-wrap: nowrap;
     }
     .state-layer {
+      max-height: 100%;
+      max-width: 100%;
+      min-width: fit-content;
       display: flex;
       padding: 0px 16px;
-      flex-direction: column;
       justify-content: flex-end;
       align-items: center;
       flex: 1 0 0;
       align-self: stretch;
       .content {
+        height: fit-content;
         display: flex;
+        align-items: center;
+        flex-direction: row;
         padding: 12px 0px;
         justify-content: center;
-        align-items: flex-end;
         gap: 8px;
         flex: 1 0 0;
+        flex-wrap: nowrap;
+        cursor: pointer;
+        white-space: nowrap;
+        color: white;
       }
     }
   }
@@ -332,19 +357,20 @@ header {
     }
   }
   .dropdown-content {
-    display: none;
+    display: flex;
+    flex-direction: column;
     position: absolute;
+    gap: 12px;
     background-color: $card-color;
     color: #e6e0e9;
     min-width: 96px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    margin-bottom: -46px;
-    margin-right: 24px;
+    margin-bottom: -100px;
+    margin-right: 22px;
     padding: 12px 16px;
     z-index: 1;
-    display: block;
     transition: all 0.3s ease-in-out;
-    transform-origin: top;
+    transform-origin: bottom;
     opacity: 0;
     a {
       color: white;
@@ -364,113 +390,111 @@ main {
   align-self: stretch;
   .chatHistory {
     display: flex;
+    overflow-y: auto;
     padding: 4px;
     flex-direction: column;
-    justify-content: flex-end;
     align-items: start;
     gap: 0px;
     flex: 1 0 0;
     align-self: stretch;
     border-radius: 16px 0px 0px 0px;
     background: $card-color;
-    .oldMessages {
-      display: flex;
-      height: 72px;
-      padding: 8px 24px 8px 16px;
-      align-items: center;
-      gap: 16px;
+  }
+}
+.oldMessages {
+  display: flex;
+  padding: 8px 24px 8px 16px;
+  align-items: center;
+  gap: 8px;
+  align-self: stretch;
+  .avatar {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    flex-shrink: 0;
+    border-radius: 100px;
+    background: var(--M3-sys-dark-primary-container, #4f378b);
+    color: white;
+  }
+  .content {
+    .headline {
       align-self: stretch;
-      .avatar {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        width: 40px;
-        height: 40px;
-        flex-shrink: 0;
-        border-radius: 100px;
-        background: var(--M3-sys-dark-primary-container, #4f378b);
-        color: white;
-      }
-      .content {
-        .headline {
-          align-self: stretch;
-          color: $secondary-color;
-          font-family: Roboto;
-          font-size: 16px;
-          font-style: normal;
-          font-weight: 400;
-          line-height: 24px; /* 150% */
-          letter-spacing: 0.5px;
-        }
-        .message {
-          height: 20px;
-          align-self: stretch;
-
-          overflow: hidden;
-          color: var(--M3-sys-dark-on-surface-variant, #cac4d0);
-          text-overflow: ellipsis;
-          white-space: nowrap;
-
-          /* M3/body/medium */
-          font-family: Roboto;
-          font-size: 14px;
-          font-style: normal;
-          font-weight: 400;
-          line-height: 20px; /* 142.857% */
-          letter-spacing: 0.25px;
-        }
-      }
+      color: $secondary-color;
+      font-family: Roboto;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 24px;
+      letter-spacing: 0.5px;
     }
-    .mySelf {
+    .message {
+      height: 20px;
+      align-self: stretch;
+
+      overflow: hidden;
+      color: var(--M3-sys-dark-on-surface-variant, #cac4d0);
+      text-overflow: ellipsis;
+      white-space: nowrap;
+
+      font-family: Roboto;
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 20px;
+      letter-spacing: 0.25px;
+    }
+  }
+}
+.mySelf {
+  display: flex;
+  justify-content: flex-end;
+  padding: 8px 24px 8px 16px;
+  align-items: center;
+  gap: 16px;
+  align-self: stretch;
+  .avatar {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    flex-shrink: 0;
+    border-radius: 100px;
+    background: var(--M3-sys-dark-primary-container, #4f378b);
+    color: white;
+  }
+  .content {
+    .headline {
       display: flex;
       justify-content: flex-end;
-      height: 72px;
-      padding: 8px 24px 8px 16px;
-      align-items: center;
-      gap: 16px;
+      color: $secondary-color;
+      font-family: Roboto;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 24px;
+      letter-spacing: 0.5px;
+    }
+    .message {
+      height: 20px;
       align-self: stretch;
-      .avatar {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        width: 40px;
-        height: 40px;
-        flex-shrink: 0;
-        border-radius: 100px;
-        background: var(--M3-sys-dark-primary-container, #4f378b);
-        color: white;
-      }
-      .content {
-        .headline {
-          align-self: stretch;
-          color: $secondary-color;
-          font-family: Roboto;
-          font-size: 16px;
-          font-style: normal;
-          font-weight: 400;
-          line-height: 24px; /* 150% */
-          letter-spacing: 0.5px;
-        }
-        .message {
-          height: 20px;
-          align-self: stretch;
+      display: flex;
+      justify-content: flex-end;
+      overflow: hidden;
+      color: var(--M3-sys-dark-on-surface-variant, #cac4d0);
+      text-overflow: ellipsis;
+      white-space: nowrap;
 
-          overflow: hidden;
-          color: var(--M3-sys-dark-on-surface-variant, #cac4d0);
-          text-overflow: ellipsis;
-          white-space: nowrap;
-
-          /* M3/body/medium */
-          font-family: Roboto;
-          font-size: 14px;
-          font-style: normal;
-          font-weight: 400;
-          line-height: 20px; /* 142.857% */
-          letter-spacing: 0.25px;
-        }
-      }
+      font-family: Roboto;
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 20px;
+      letter-spacing: 0.25px;
     }
   }
 }
@@ -564,7 +588,6 @@ aside {
       &:hover {
         background: $card-color;
       }
-      //border-bottom: $secondary-color 1px solid;
       .stateLayer {
         display: flex;
         padding: 8px 24px 8px 16px;
@@ -582,12 +605,11 @@ aside {
           color: #fef7ff;
           text-align: center;
 
-          /* M3/title/medium */
           font-family: Roboto;
           font-size: 16px;
           font-style: normal;
           font-weight: 500;
-          line-height: 24px; /* 150% */
+          line-height: 24px;
           letter-spacing: 0.15px;
           border-radius: 100px;
           border: 2px solid $secondary-color;
@@ -598,12 +620,11 @@ aside {
             align-self: stretch;
             color: $secondary-color;
 
-            /* M3/body/large */
             font-family: Roboto;
             font-size: 16px;
             font-style: normal;
             font-weight: 400;
-            line-height: 24px; /* 150% */
+            line-height: 24px;
             letter-spacing: 0.5px;
           }
           .littleText {
@@ -615,16 +636,51 @@ aside {
             text-overflow: ellipsis;
             white-space: nowrap;
 
-            /* M3/body/medium */
             font-family: Roboto;
             font-size: 14px;
             font-style: normal;
             font-weight: 400;
-            line-height: 20px; /* 142.857% */
+            line-height: 20px;
             letter-spacing: 0.25px;
           }
         }
       }
     }
   }
+}
+
+.tooltip {
+  position: relative;
+  gap: 8px;
+  .tooltiptext {
+    margin-left: 8px;
+    display: inline-flex;
+    position: relative;
+    visibility: hidden;
+    overflow: visible;
+    width: fit-content;
+    background-color: gray;
+    color: #fff;
+    text-align: center;
+    border-radius: 4px;
+    padding: 2px 1px;
+    font-size: 12px;
+
+    /* Position the tooltip */
+    top: 0;
+    z-index: 1;
+  }
+  &:hover .tooltiptext {
+    visibility: visible;
+  }
+}
+
+.serachBarResult {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  grid-area: main;
+  color: white;
+  width: 100%;
+  height: fit-content;
 }
