--- a/chat/templates/chat/base.html
+++ b/chat/templates/chat/base.html
@@ -13,7 +13,7 @@
     <meta content={% block description %}"Django Chat App"{% endblock %}
     name="description">
 
-    <link href="{% static './css/style.css' %}" rel="stylesheet" />
+    <link href="{% static 'css/style.css' %}" rel="stylesheet" />
   </head>
 
   <body>
